# authen

./: Cargo.toml
.github/workflows/: general.yaml
docs/: routes.md  sql-tables.md
migrations/: 0001_add_users.sql  0002_unify_confirmation_codes_table.sql  0003_add_data_column_to_confirmation_code_table.sql  0004_create_permission_tables.sql.sql  0005_add_cascade.sql
scripts/: db_cleanup.sh  test.sh
src/: configuration.rs  consts.rs  crypto.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/auth/: hash.rs  jwt.rs  mod.rs  otp.rs
src/clients/: email.rs
src/command/: mod.rs
src/command/confirmation_code/: create.rs  delete.rs  mod.rs
src/command/permissions/: create.rs  delete.rs  mod.rs  sync.rs
src/command/registration_code/: create.rs  delete.rs  mod.rs
src/command/update_data/: create.rs  delete.rs
src/command/user/: activate.rs  create.rs  delete.rs  mod.rs  (+1 more)
src/commands/: mod.rs
src/error/: mod.rs
src/extractor/: user_token.rs
src/model/: comma_separated_vec.rs  confirmation_code.rs  confirmation_code_type.rs  email.rs  hashed_string.rs  mod.rs  user.rs  user_token_claims.rs
src/query/: mod.rs
src/routes/: health_check.rs
src/settings/: mod.rs
src/utils/: error.rs  generation.rs  jwt.rs  mod.rs  vec.rs
tests/api/: delete_confirmations_registration.rs  health_check.rs  helpers.rs  main.rs  post_confirmations_registration.rs  post_session.rs  post_users.rs
tests/clients/: email.rs
tests/extractor/: user_token.rs
tests/model/: comma_separated_vec.rs  email.rs  main.rs  registration_code.rs
tests/utils/: vec.rs
(+77 files in other folders)
