[package]
name = "authen"
version = "0.1.0"
edition = "2024"
authors = ["Jan Żukowski <direct@jzuk.pl>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "authen"

[dependencies]
actix-web = "4.13.0"
config = { version = "0.15.22", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.18"
anyhow = "1.0.40"
serde-aux = "4"
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = { version = "0.10.0", features = ["std"] }
base64 = "0.22.1"
validator = "0.20.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "cookies",
    "rustls"
] }
serde_urlencoded = "0.7.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
fake = "5.1.0"
wiremock = "0.6.5"
